src/sass/objects/_search.scss
.search {
    top: 0;
    right: 0;
    width: 48px;
    height: 100%;
    position: absolute;

    .search__btn {
        padding: 0;
        width: 100%;
        height: 100%;
    }
}

.search__input {
    top: 0;
    right: 0;
    border: 0;
    margin: 0;
    width: 100%;
    height: 100%;
    padding: 10px;
    position: absolute;
    background-color: $delta;
}

